0000-00-00:
    * version 0.8.7
    * Fix some remaining issues with recent layout changes
    * Fix problem with buttons on the new topic/post page

2012-01-25:
    * version 0.8.6
    * Fix crash with Ricapar's Classic theme when clicking on the login form
    * Fix split board lists overwriting favorites list
    * Fix board-specific signatures using board IDs
    * Enable code and quote HTML tag buttons by default
    * Switch to a password-based account manager instead of a cookie-based one -
      accounts will no longer need to have their password re-entered
      periodically
    * More minor bug fixes

2012-01-01:
    * version 0.8.5.1
    * Fix account-specific signatures

2011-12-31:
    * version 0.8.5
    * Make the edit history drop-down menu look nicer
    * Remove compatibility with:
        - Firefox 3.5 (3.6 is still supported)
        - SeaMonkey 2.0 (minimum is now 2.1)
    * Fix QuickWhois being unreadable with some themes
    * Fix options window on OS X
    * Simplify signature mangement: the signature textbox is hidden unless
      you're using GameFOX to manage your signatures. Signatures are now stored
      only on GameFAQs by default, but no features were removed
    * Basic (incomplete) support for reverse ("newest first") message ordering
    * Highlight the "New Messages" link when you have new PMs
    * Add a quick reply for PMs: write a reply while having the original message
      on the same page
    * Add buttons to follow, add as friend, or PM a user from QuickWhois
    * Other minor bug fixes and enhancements

2011-11-25:
    * version 0.8.4
    * GameFOX sidebar:
        - Add Vita and Wii U to platform links
        - Fix login form
    * Fix quoting bug when the Disconnect extension is installed
    * Include the signature in the character count (to be consistent with
      GameFAQs)
    * Quick editing! Edit your posts on the message list without leaving the
      page