@@ -269,6 +269,14 @@
     </tr>
 
     <tr>
+        <td>span.gamefox-post-buttons</td>
+        <td>Contains post, preview and reset buttons for quick post, quick
+            edit, and regular posting.</td>
+        <td>0.8.7</td>
+        <td>-</td>
+    </tr>
+
+    <tr>
         <td>span.gamefox-post-date</td>
         <td>Contains the timestamp of each post on the message list.</td>
         <td>0.7.8</td>
